# Panel_Lavadora

./: README.md
temporizador/: CMakeLists.txt
